<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="cancle">取消</string>
    <string name="finish">完成</string>
    <string name="app_name">jmu课程表</string>
    <string name="menu_settings">设置</string>
    <string name="set">设置</string>
    <string name="message_set">消息设置</string>
    <string name="quiet">开启上课自动静音</string>
    <string name="remind">开启课前振动提醒</string>
    <string name="about_app">软件相关</string>
    <string name="revision">版本支持</string>
    <string name="us">关于作者</string>
    <string name="heading">课表信息</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="edit_title">课程信息</string>
    <string name="course_name">课程名称：</string>
    <string name="course_address">教室地点：</string>
    <string name="course_teacher">老师姓名：</string>
    <string name="course_amount">上课节数：</string>
    <string name="course_week">上课周数：</string>
    <string name="course_time">上课时间：</string>
    <string name="input_course_name">请输入课程名称</string>
    <string name="input_course_address">请输入教室地点</string>
    <string name="input_course_teacher">请输入老师姓名</string>
    <string name="input_course_week">总周数或单双周</string>
    <string name="input_course_jieshu">总节数不超过4</string>
    <string name="to">至</string>
    <string name="jieshulimit">1 2 3 4</string>
    <string name="action_settings">动作</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="course_title">我的课表</string>
    <string name="search">课表查询</string>
    <string name="courses">课表</string>
    <string name="rublesson">蹭课</string>
    <string name="alarmclock">闹钟</string>
    <string name="setting">设置</string>
    <string name="confirm">确认</string>
    <string name="courseadd">创建课程</string>
    <string name="change_weekNum">改变周数</string>
    <string name="newcourse">新建课程</string>
    <string name="editcourse">修改课程</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>