<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/form_icon"
            android:title="@string/courses"
            />
        <item
            android:id="@+id/nav_rublesson"
            android:icon="@drawable/cengke_icon"
            android:title="@string/rublesson"/>
        <item
            android:id="@+id/nav_alarmclock"
            android:icon="@drawable/alarmclock"
            android:title="@string/alarmclock" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/setting_icon"
            android:title="@string/setting"/>
    </group>
</menu>