<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:background="@color/theme_red"
        android:id="@+id/course_add_tag"
        android:text="@string/newcourse"
        android:textSize="19sp"
        android:textColor="@color/white"
        android:gravity="center_vertical|left"
        android:padding="8dip"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_add_TextView_courseName"
            android:layout_weight="0.29"
            android:textColor="@color/tabtext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/course_add_EditText_courseName"
            android:layout_weight="0.29" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/course_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_add_TextView_teacher"
            android:layout_weight="0.29"
            android:textColor="@color/tabtext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/course_add_EditText_teacher"
            android:layout_weight="0.29" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/course_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/course_add_TextView_loca"
            android:layout_weight="0.29"
            android:textColor="@color/tabtext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/course_add_EditText_loca"
            android:layout_weight="0.29" />
    </LinearLayout>

</LinearLayout>
